[gd_scene load_steps=2 format=3 uid="uid://jdba67lbpoih"]

[ext_resource type="Script" path="res://scenes/game/end_scene.gd" id="1_kbh2t"]

[node name="EndScene" type="Node2D"]
script = ExtResource("1_kbh2t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PanelContainer3" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="YouDiedText" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "YOU DIED"
horizontal_alignment = 1

[node name="CongratulationsText" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
text = "Congratulations!
You escaped the cave"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Retry"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MarginContainer/VBoxContainer/PanelContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
